--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: 一颗待发芽的豆
 description:
 author: 豆神
 language: zh-Hans
-timezone: Aisa/shenzhen
+timezone: 
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
