--- a/themes/hexo-theme-next/_config.yml
+++ b/themes/hexo-theme-next/_config.yml
@@ -55,7 +55,7 @@ footer:
     version: true
   # -------------------------------------------------------------
   # Any custom text can be defined here.
-  #custom_text: Hosted by <a target="_blank" href="https://pages.github.com">GitHub Pages</a>
+  # custom_text: <a target="_blank" href="https://support.qq.com/products/20694">网站吐槽</a>
 
 # ---------------------------------------------------------------
 # SEO Settings
